Fix breakpoint to prevent content overlap

--- a/css/styles.css
+++ b/css/styles.css
@@ -76,7 +76,7 @@ nav h1 a {
     margin: 0;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 960px) {
   #breadcrumb {
       width: calc(50% - 80px);
   }
@@ -189,7 +189,7 @@ nav h1 a {
 }
 
 /* ====================== Restaurant Details ====================== */
-@media (min-width: 768px) {
+@media (min-width: 960px) {
   .inside header {
     position: fixed;
     top: 0;
@@ -255,7 +255,7 @@ nav h1 a {
   padding: 30px 40px 0px;
 }
 #reviews-container {
-  padding: 30px 40px 80px;
+  padding: 20px 20px 80px;
 }
 #reviews-container h2 {
   color: #f58500;
